--- a/nginx.conf
+++ b/nginx.conf
@@ -12,13 +12,13 @@ server {
         try_files $uri $uri/ /guixi_detail/index.html;
     }
     location /magnate {
-        proxy_pass http://shandenabian.skylarkly.com/magnate;
+        proxy_pass https://gxzh.cdht.gov.cn/magnate;
     }  
     location /oauth{
-        proxy_pass http://shandenabian.skylarkly.com;
+        proxy_pass https://gxzh.cdht.gov.cn;
     }
     location /api{                                          
-        proxy_pass http://shandenabian.skylarkly.com;          
+        proxy_pass https://gxzh.cdht.gov.cn;          
     } 
 
 
