--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "property_consultant",
+  "name": "guixi",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Xanadu-zxl <xanadu.zxl@gmail.com>",
